--- a/images/css/fonts.css
+++ b/images/css/fonts.css
@@ -21,37 +21,37 @@
   font-family: "Gilroy-Medium";
   font-weight: 500; 
   font-style: normal;
-  src: url("./images/css/fonts/Gilroy/Gilroy-Medium/Gilroy-Medium.eot"),
-       url("./images/css/fonts/Gilroy/Gilroy-Medium/Gilroy-Medium.ttf"),
-       url("./images/css/fonts/Gilroy/Gilroy-Medium/Gilroy-Medium.woff"),
-       url("./images/css/fonts/Gilroy/Gilroy-Medium/Gilroy-Medium.woff2");
+  src: url("/images/fonts/Gilroy/Gilroy-Medium/Gilroy-Medium.eot"),
+       url("/images/fonts/Gilroy/Gilroy-Medium/Gilroy-Medium.ttf"),
+       url("/images/fonts/Gilroy/Gilroy-Medium/Gilroy-Medium.woff"),
+       url("/images/fonts/Gilroy/Gilroy-Medium/Gilroy-Medium.woff2");
 }
 @font-face {
   font-family: "Gilroy-Semibold";
   font-weight: 600; 
   font-style: normal;
-  src: url("./images/css/fonts/Gilroy/Gilroy-Semibold/Gilroy-Semibold.eot"),
-       url("./images/css/fonts/Gilroy/Gilroy-Semibold/Gilroy-Semibold.ttf"),
-       url("./images/css/fonts/Gilroy/Gilroy-Semibold/Gilroy-Semibold.woff"),
-       url("./images/css/fonts/Gilroy/Gilroy-Semibold/Gilroy-Semibold.woff2");
+  src: url("/images/fonts/Gilroy/Gilroy-Semibold/Gilroy-Semibold.eot"),
+       url("/images/fonts/Gilroy/Gilroy-Semibold/Gilroy-Semibold.ttf"),
+       url("/images/fonts/Gilroy/Gilroy-Semibold/Gilroy-Semibold.woff"),
+       url("/images/fonts/Gilroy/Gilroy-Semibold/Gilroy-Semibold.woff2");
 }
 @font-face {
   font-family: "Gilroy-Bold";
   font-weight: 700; 
   font-style: normal;
-  src: url("./images/css/fonts/Gilroy/Gilroy-Bold/Gilroy-Bold.eot"),
-       url("./images/css/fonts/Gilroy/Gilroy-Bold/Gilroy-Bold.ttf"),
-       url("./images/css/fonts/Gilroy/Gilroy-Bold/Gilroy-Bold.woff"),
-       url("./images/css/fonts/Gilroy/Gilroy-Bold/Gilroy-Bold.woff2");
+  src: url("/images/fonts/Gilroy/Gilroy-Bold/Gilroy-Bold.eot"),
+       url("/images/fonts/Gilroy/Gilroy-Bold/Gilroy-Bold.ttf"),
+       url("/images/fonts/Gilroy/Gilroy-Bold/Gilroy-Bold.woff"),
+       url("/images/fonts/Gilroy/Gilroy-Bold/Gilroy-Bold.woff2");
 }
 @font-face {
   font-family: "Gilroy-Extrabold";
   font-weight: 800; 
   font-style: normal;
-  src: url("./images/css/fonts/Gilroy/Gilroy-Extrabold/Gilroy-Extrabold.eot"),
-       url("./images/css/fonts/Gilroy/Gilroy-Extrabold/Gilroy-Extrabold.ttf"),
-       url("./images/css/fonts/Gilroy/Gilroy-Extrabold/Gilroy-Extrabold.woff"),
-       url("./images/css/fonts/Gilroy/Gilroy-Extrabold/Gilroy-Extrabold.woff2");
+  src: url("/images/fonts/Gilroy/Gilroy-Extrabold/Gilroy-Extrabold.eot"),
+       url("/images/fonts/Gilroy/Gilroy-Extrabold/Gilroy-Extrabold.ttf"),
+       url("/images/fonts/Gilroy/Gilroy-Extrabold/Gilroy-Extrabold.woff"),
+       url("/images/fonts/Gilroy/Gilroy-Extrabold/Gilroy-Extrabold.woff2");
 }
 
 
@@ -59,26 +59,26 @@
   font-family: "Roboto-Light";
   font-weight: 200; 
   font-style: normal;
-  src: url("./images/css/fonts/Roboto/Roboto-Light/Roboto-Light.eot"),
-       url("./images/css/fonts/Roboto/Roboto-Light/Roboto-Light.ttf"),
-       url("./images/css/fonts/Roboto/Roboto-Light/Roboto-Light.woff"),
-       url("./images/css/fonts/Roboto/Roboto-Light/Roboto-Light.woff2");
+  src: url("/images/fonts/Roboto/Roboto-Light/Roboto-Light.eot"),
+       url("/images/fonts/Roboto/Roboto-Light/Roboto-Light.ttf"),
+       url("/images/fonts/Roboto/Roboto-Light/Roboto-Light.woff"),
+       url("/images/fonts/Roboto/Roboto-Light/Roboto-Light.woff2");
 }
 @font-face {
   font-family: "Roboto-Medium";
   font-weight: 500; 
   font-style: normal;
-  src: url("./images/css/fonts/Roboto/Roboto-Medium/Roboto-Medium.eot"),
-       url("./images/css/fonts/Roboto/Roboto-Medium/Roboto-Medium.ttf"),
-       url("./images/css/fonts/Roboto/Roboto-Medium/Roboto-Medium.woff"),
-       url("./images/css/fonts/Roboto/Roboto-Medium/Roboto-Medium.woff2");
+  src: url("/images/fonts/Roboto/Roboto-Medium/Roboto-Medium.eot"),
+       url("/images/fonts/Roboto/Roboto-Medium/Roboto-Medium.ttf"),
+       url("/images/fonts/Roboto/Roboto-Medium/Roboto-Medium.woff"),
+       url("/images/fonts/Roboto/Roboto-Medium/Roboto-Medium.woff2");
 }
 @font-face {
   font-family: "Roboto-Bold";
   font-weight: 700; 
   font-style: normal;
-  src: url("./images/css/fonts/Roboto/Roboto-Bold/Roboto-Bold.eot"),
-       url("./images/css/fonts/Roboto/Roboto-Bold/Roboto-Bold.ttf"),
-       url("./images/css/fonts/Roboto/Roboto-Bold/Roboto-Bold.woff"),
-       url("./images/css/fonts/Roboto/Roboto-Bold/Roboto-Bold.woff2");
+  src: url("/images/fonts/Roboto/Roboto-Bold/Roboto-Bold.eot"),
+       url("/images/fonts/Roboto/Roboto-Bold/Roboto-Bold.ttf"),
+       url("/images/fonts/Roboto/Roboto-Bold/Roboto-Bold.woff"),
+       url("/images/fonts/Roboto/Roboto-Bold/Roboto-Bold.woff2");
 }
