--- a/images/css/main.css
+++ b/images/css/main.css
@@ -597,10 +597,16 @@ a:hover {
   font-family: "Gilroy-Bold";
 }
 .social-media-links {
+  display: block;
+  font-size: 0px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.social-media-link {
   margin-top: 9px;
 }
-.social-media-link:last-child {
-  margin-left: 8px;
+.social-media-link {
+  margin-right: 8px;
 }
 .phone-title {
   font-size: 16px;
