--- a/images/css/main.css
+++ b/images/css/main.css
@@ -161,6 +161,11 @@ a:hover {
   margin-top: 30px;
   display: flex;
 }
+.brand-card {
+  display: flex;
+  flex-direction: column; 
+  height: 100%;
+}
 .brand-card-header {
   background: #FFFAF4;
   border-radius: 2px;
@@ -174,27 +179,28 @@ a:hover {
   line-height: 37px;
 }
 .brand-card-text {
-  text-align: -moz-center;
+  text-align: center;
+  margin: auto;
+  margin-top: 9px;
   margin-top: 6px;
   max-width: 66%;
   font-size: 18px;
   line-height: 28px;
+  margin-bottom: 19px;
+}
+.brand-card-wrapper {
+  margin-top: auto;
 }
 .brand-cards-benefits {
   display: flex;
-  margin-top: 19px;
   justify-content: space-evenly;
+  margin-bottom: 28px;
 }
 .brand-card-benefit {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   max-width: 121px;
-}
-.brand-card-text {
-  margin: auto;
-  margin-top: 9px;
-  text-align: center;
 }
 .brand-icon-text {
   margin-top: 9px;
@@ -204,13 +210,12 @@ a:hover {
 .brand-card-link {
   display: flex;
   justify-content: center;
+  margin: auto;
   max-width: 33%;
   font-size: 14px;
   line-height: 18px;
   padding-top: 15px;
   padding-bottom: 15px;
-  margin: auto;
-  margin-top: 28px;
   font-family: "Gilroy-Semibold";
 }
 .promotion {
@@ -255,6 +260,11 @@ a:hover {
 .products {
   padding-top: 32px;
 }
+.product-card {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
 .product-card-header {
   background: #FFFAF4;
   border-radius: 2px;
@@ -271,6 +281,9 @@ a:hover {
   font-family: "Gilroy-Bold";
   text-align: center;
   max-width: 85%;
+}
+.product-wrapper {
+  margin-top: auto;
 }
 .product-dropdown {
   display: flex;
@@ -384,7 +397,6 @@ a:hover {
 }
 .second-section-yellow {
   background: url('/images/img/banner-background.png') no-repeat center;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   padding-top: 123px;
   padding-bottom: 120px;
 }
