--- a/images/css/main.css
+++ b/images/css/main.css
@@ -94,39 +94,8 @@ a:hover {
   padding-bottom: 106px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-.slider {
-  position: relative;
-}
-.slider-item {
-  overflow: hidden;
-  margin-right: 30px;
-}
 .banner {
   margin-top: 6px;
-}
-.slick-arrow {
-  position: absolute;
-  top: 82%;
-  z-index: 10;
-  font-size: 0;
-  border: none;
-  display: flex;
-  min-width: 100%;
-  min-height: 100%;
-}
-.slick-arrow.slick-prev {
-  background: url("/images/img/slider-prev.svg") no-repeat;
-  left: 56%;
-}
-.slick-arrow.slick-next {
-  background: url("/images/img/slider-next.svg") no-repeat;
-  left: 59%;
-}
-.slick-list {
-  overflow: hidden;
-}
-.slick-track {
-  display: flex;
 }
 .banner-title {
   font-family: "Gilroy-Extrabold";
@@ -169,7 +138,7 @@ a:hover {
   display: flex;
   justify-content: center;
   font-family: "Gilroy-Bold";
-  max-width: 41%;
+  width: 220px;
   margin-top: 39px;
   font-size: 14px;
   line-height: 18px;
@@ -179,6 +148,7 @@ a:hover {
 .banner-slider-image {
   margin-top: -51px;
 }
+/* swiper */
 .brands {
   margin-top: 29px;
 }
@@ -242,7 +212,7 @@ a:hover {
   display: flex;
   justify-content: center;
   margin: auto;
-  max-width: 33%;
+  width: 180px;
   font-size: 14px;
   line-height: 18px;
   padding-top: 15px;
@@ -390,7 +360,7 @@ a:hover {
   justify-content: center;
   padding-top: 15px;
   padding-bottom: 15px;
-  min-width: 33%;
+  width: 130px;
   font-family: "Gilroy-Bold";
   font-size: 14px;
   line-height: 18px;
@@ -484,7 +454,7 @@ a:hover {
   margin-top: 25px;
   padding-top: 15px;
   padding-bottom: 15px;
-  max-width: 20%;
+  width: 200px;
   font-size: 14px;
   line-height: 18px;
   font-family: "Gilroy-Bold";
@@ -552,7 +522,7 @@ a:hover {
   justify-content: center;
   padding-top: 15px;
   padding-bottom: 15px;
-  max-width: 50%;
+  width: 180px;
   margin: auto;
   margin-top: 30px;
 }
@@ -585,7 +555,7 @@ a:hover {
   padding-top: 15px;
   padding-bottom: 15px;
   margin-top: 41px;
-  max-width: 50%;
+  width: 180px;
   font-size: 14px;
   line-height: 18px;
   font-family: "Gilroy-Bold";
@@ -669,7 +639,7 @@ a:hover {
 .phone-link {
   display: flex;
   justify-content: center;
-  max-width: 60%;
+  width: 140px;
   margin-top: 15px;
   margin-left: 3.2rem;
   padding-top: 10px;
