--- a/images/css/catalog_page.css
+++ b/images/css/catalog_page.css
@@ -25,6 +25,7 @@ ul {
 .logo {
   position: absolute;
 }
+
 .nav-menu {
   margin-top: 35px;
   margin-left: -30px;
@@ -98,41 +99,11 @@ ul {
 }
 .section-yellow {
   background: url('/images/img/banner-background.png') no-repeat center;
-  padding-top: 55px;
-  padding-bottom: 62px;
-}
-.banner-title {
-  font-family: "Gilroy-Extrabold";
-  font-size: 72px;
-  line-height: 88px;
-  min-width: 110%;
-}
-.banner-subtitle {
-  font-family: "Gilroy-Bold";
-  font-size: 30px;
-  line-height: 36px;
-  margin-top: 8px;
-}
-.banner-text {
-  font-size: 18px;
-  line-height: 28px;
-  margin-top: 15px;
-  max-width: 90%;
-}
-.banner-link {
-  display: flex;
-  justify-content: center;
-  font-family: "Gilroy-Bold";
-  width: 220px;
-  margin-top: 39px;
-  font-size: 14px;
-  line-height: 18px;
-  padding-top: 19px;
-  padding-bottom: 19px;
+  height: 84px;
 }
 .bread {
-  padding-top: 26px;
-  padding-bottom: 26px;
+  padding-top: 22px;
+  padding-bottom: 28px;
 }
 .bread-ul {
   display: flex;
@@ -162,62 +133,242 @@ ul {
   line-height: 15px;
   color: #9A9A9A;
 }
-.catalog-products {
-  margin-bottom: 109px;
+.catalog-page-title {
+  font-size: 36px;
+  line-height: 44px;
+  font-family: "Gilroy-Extrabold";
+  margin-bottom: 40px;
 }
-.sidebar-item {
+.catalog-cards {
+  padding-bottom: 99px;
+}
+.search-input {
+  width: 100%;
+  margin-top: 15px;
+  font-size: 13px;
+  line-height: 15px;
+  padding: 15px 12px  15px 16px;
+  opacity: 0.5;
+  position: relative;
+}
+.search-icon {
+  position: absolute;
+  top: 88px;
+  right: 50px;
+}
+.sidebar-box {
+  display: flex;
+  flex-direction: column;
+  background: #FFFAF4;
+  margin-bottom: 20px;
+}
+.sidebar-search {
+  padding: 19px 20px 15px 20px;
+}
+.sidebar-price {
+  padding: 19px 20px 24px 21px;
+}
+.sidebar-text {
+  font-size: 15px;
+  line-height: 18px;
+  font-family: "Gilroy-Bold";
+  margin-bottom: 19px;
+  position: relative;
+}
+.sidebar-text:after {
+  content: ">";
+  color: #27AE60;
+  right: 0.5rem;
+  top: 0.2rem;
+  position: absolute;
+  transform: matrix(0, 1, 1.7, 0, 0, 0);
+  pointer-events: none;
+}
+.sidebar-line {
+  border: 1px solid #EDD6BF;
+}
+.price-input-group {
+  margin-top: 15px;
   display: flex;
   align-items: center;
-  padding: 16px 18px;
-  background: #FFFFFF;
-  border: 1px solid #EDD6BF;
-  border-radius: 2px;
-  margin-bottom: 4px;
 }
-.sidebar-item-text {
-  margin-left: 18px;
+.price-input-devider {
+  margin-left: 10px;
+  margin-right: 10px;
 }
-.catalog-card {
+.price-input {
+  padding: 16px;
+  max-width: 45%;
+  font-size: 13px;
+  line-height: 15px;
+  opacity: 0.5;
+}
+.range-filter {
+  margin-top: 25px;
+}
+.range-controls {
+  position: relative;
+  height: 5px;
+}
+.scale { 
+  height: 100%;
+  background: #EDD6BF;;
+  width: 100%;
+  border-radius: 4px;
+}
+.bar {
+  height: 100%;
+  background: #109347;
+  width: 135px;
+}
+.toggle {
+  top: -4px;
+  position: absolute;
+  border: 4px solid #109347;
+  background: white;
+  cursor: pointer;
+  border-radius: 50%;
+  width: 12px;
+  height: 12px;
+}
+.min-toggle {
+  left: -1px;
+}
+.max-toggle {
+   left: 134px;
+}
+.product-card {
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   height: 100%;
 }
-.catalog-card-header {
+.product-card-header {
   background: #FFFAF4;
   border-radius: 2px;
-  padding: 41px 58px 30px 59px;
+  padding: 45px 48px;
 }
-.catalog-card-title {
+.product-card-image {
+  margin-left: auto;
+  margin-right: auto;
+}
+.product-card-title {
+  margin-top: 25px;
+  font-size: 18px;
+  line-height: 24px;
   font-family: "Gilroy-Bold";
   text-align: center;
-  margin-top: 30px;
-  font-size: 30px;
-  line-height: 37px;
+  max-width: 85%;
 }
-.catalog-card-text {
+.product-wrapper {
+  margin-top: auto;
+  margin-bottom: 50px;
+}
+.product-dropdown {
+  display: flex;
+  margin-top: 18px;
+  position: relative;
+}
+.select {
+  appearance: none;
+  min-width: 100%;
+  cursor: pointer;
+  border: 1px solid #DADCE0;
+  border-radius: 2px;
+  background: #fff;
+  padding: 13px;
+  opacity: 0.5;
+  font-size: 12px;
+  line-height: 14px;
+  font-family: "Roboto-Light";
+}
+.product-dropdown:after {
+  content: ">";
+  color: #27AE60;
+  right: 1rem;
+  top: 0.7rem;
+  position: absolute;
+  transform: matrix(0, 1, 1.7, 0, 0, 0);
+  pointer-events: none;
+}
+.product-buy {
+  display: flex;
+  margin-top: 18px;
+  align-items: center;
+  justify-content: space-between;
+}
+.price-text, .price {
+  font-size: 16px;
+  line-height: 24px;
+}
+.price {
+  margin-left: 5px;
+  font-family: "Gilroy-Bold";
+}
+.amount {
+  border: 1px solid #EDD6BF;
+  border-radius: 2px;
+  margin-left: 10px;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+}
+.num {
+  font-size: 14px;
+  line-height: 16px;
   text-align: center;
-  margin: auto;
-  margin-top: 9px;
-  margin-top: 6px;
-  max-width: 100%;
-  font-size: 18px;
-  line-height: 28px;
-  margin-bottom: 19px;
+  opacity: 0.5;
+  font-family: "Roboto-Light";
+  margin: 15px 8px;
 }
-.catalog-card-link {
+.minus {
+  margin-left: 9px;
+  display: flex;
+  cursor: pointer;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+.plus {
+  margin-right: 9px;
+  display: flex;
+  cursor: pointer;
+}
+.buy-link {
   display: flex;
   justify-content: center;
-  margin: auto;
-  max-width: 90%;
-  width: 180px;
-  font-size: 14px;
-  line-height: 18px;
   padding-top: 15px;
   padding-bottom: 15px;
-  font-family: "Gilroy-Semibold";
+  width: 130px;
+  font-family: "Gilroy-Bold";
+  font-size: 14px;
+  line-height: 18px;
 }
-.card-link-wrapper {
-  margin-top: auto;
+.pages-menu {
+  display: flex;
+  margin: auto;
+}
+.page-box {
+  padding-top: 16px;
+  padding-bottom: 16px;
+  text-align: center;
+  width: 48px;
+  border: 1px solid #EDD6BF;
+  font-size: 16px;
+  line-height: 16px;
+  cursor: pointer;
+  margin-top: 50px;
+}
+.dots {
+  cursor: default;
+}
+.active {
+  background: #27AE60;
+  color: #fff;
+}
+.dots {
+  border: none;
+}
+.arrow-next {
+  transform: rotate(180deg);
 }
 .footer {
   background:url("/images/img/banner-background.png") no-repeat center;
