--- a/images/css/main.css
+++ b/images/css/main.css
@@ -145,10 +145,40 @@ a:hover {
   padding-top: 19px;
   padding-bottom: 19px;
 }
+..banner-slider {
+  position: relative;
+}
 .banner-slider-image {
   margin-top: -51px;
 }
-/* swiper */
+.swiper-buttons {
+  position: absolute;
+  top: 80%;
+  right: 45%;
+  border: 1px solid #fff;
+  background: #FFFFFF;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+  border-radius: 36px;
+}
+.swiper-button-prev {
+  left: 0;
+}
+.swiper-button-prev:after {
+  content: " ";
+  background: url('/images/img/arrow.svg') no-repeat;
+  height: 16px; 
+  width: 8px;
+}
+.swiper-button-next {
+  right: -70px;
+}
+.swiper-button-next:after {
+  content: " ";
+  background: url('/images/img/arrow.svg') no-repeat;
+  height: 16px; 
+  width: 8px;
+  transform: rotate(180deg);
+}
 .brands {
   margin-top: 29px;
 }
