--- a/images/css/catalog.css
+++ b/images/css/catalog.css
@@ -17,7 +17,7 @@ ul {
   list-style: none;
 }
 .container {
-  max-width: 1170px;
+  max-width: 1200px;
 }
 .header {
   padding-bottom:  22px;
@@ -129,6 +129,49 @@ ul {
   line-height: 18px;
   padding-top: 19px;
   padding-bottom: 19px;
+}
+.swiper-catalog-img {
+  max-width: 100%;
+}
+.swiper-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 57%;
+  bottom: 12%;
+  z-index: 99;
+  max-width: 70px;
+  border: 1px solid #fff;
+  background: #FFFFFF;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+  border-radius: 36px;
+}
+.swiper-button-prev {
+  display: flex;
+  left: 0;
+  position: relative;
+  margin-top: 0;
+}
+.swiper-button-prev:after {
+  content: " ";
+  background: url('/images/img/arrow.svg') no-repeat;
+  height: 16px; 
+  width: 8px;
+}
+.swiper-button-next {
+  display: flex;
+  right: 0px;
+  top: -1px;
+  position: relative;
+  margin-top: 0;
+}
+.swiper-button-next:after {
+  content: " ";
+  background: url('/images/img/arrow.svg') no-repeat;
+  height: 16px; 
+  width: 8px;
+  transform: rotate(180deg);
 }
 .bread {
   padding-top: 26px;
