--- a/images/css/product.css
+++ b/images/css/product.css
@@ -188,6 +188,7 @@ ul {
   padding-top: 17px;
   padding-bottom: 17px;
   color: #434343;
+  border: 1px solid #DADCE0;
   opacity: 0.5;
 }
 .copy-icon {
