--- a/images/css/catalog_page.css
+++ b/images/css/catalog_page.css
@@ -20,12 +20,23 @@ ul {
   max-width: 1200px;
 }
 .header {
-  padding-bottom:  22px;
+  width: 100%;
+  height: 90px;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  position: fixed;
+  background-color: #fff;
+}
+.header.fixed {
+  box-shadow: 0 0 10px 4px #ededed;
 }
 .logo {
   position: absolute;
 }
-
+.logo-image.fixed {
+  max-height: 85px;
+}
 .nav-menu {
   margin-top: 35px;
   margin-left: -30px;
@@ -100,6 +111,7 @@ ul {
 .section-yellow {
   background: url('/images/img/banner-background.png') no-repeat center;
   height: 84px;
+  margin-top: 90px;
 }
 .bread {
   padding-top: 22px;
@@ -142,20 +154,32 @@ ul {
 .catalog-cards {
   padding-bottom: 99px;
 }
+.sidebar-btn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  transform: none;
+}
+.sidebar-form {
+  display: none;
+}
+.search-form {
+  position: relative;
+}
 .search-input {
-  width: 100%;
   margin-top: 15px;
+  width: 100%;
   font-size: 13px;
   line-height: 15px;
   padding: 15px 12px  15px 16px;
   opacity: 0.5;
-  position: relative;
 }
 .search-icon {
-  position: absolute;
-  top: 88px;
-  right: 50px;
+  top: 29px;
+  right: 10px;
   cursor: pointer;
+  position: absolute;
 }
 .sidebar-box {
   display: flex;
@@ -173,30 +197,19 @@ ul {
   font-size: 15px;
   line-height: 18px;
   font-family: "Gilroy-Bold";
-  margin-bottom: 19px;
-  position: relative;
 }
 .sidebar-arrow {
-  cursor: pointer;
-  transform: rotate(90deg);
-  position: absolute;
+  transform: rotate(270deg);
   padding: 5px;
-}
-.sidebar-search-arrow {
-  top: 24px;
-  right: 39px;
-}
-.sidebar-price-arrow {
-  top: 177px;
-  right: 39px;
 }
 .sidebar-line {
   border: 1px solid #EDD6BF;
+  margin-top: 19px;
 }
 .price-input-group {
-  margin-top: 15px;
   display: flex;
   align-items: center;
+  margin-top: 15px;
 }
 .price-input-devider {
   margin-left: 10px;
@@ -246,7 +259,8 @@ ul {
 .product-card {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: calc(100% - 20px);
+  margin-top: 20px;
 }
 .product-card-header {
   background: #FFFAF4;
