--- a/images/css/product.css
+++ b/images/css/product.css
@@ -20,12 +20,23 @@ ul {
   max-width: 1200px;
 }
 .header {
-  padding-bottom:  22px;
+  width: 100%;
+  height: 90px;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  position: fixed;
+  background-color: #fff;
+}
+.header.fixed {
+  box-shadow: 0 0 10px 4px #ededed;
 }
 .logo {
   position: absolute;
 }
-
+.logo-image.fixed {
+  max-height: 85px;
+}
 .nav-menu {
   margin-top: 35px;
   margin-left: -30px;
@@ -99,6 +110,7 @@ ul {
 }
 .section-yellow {
   background: url('/images/img/banner-background.png') no-repeat center;
+  margin-top: 90px;
   height: 84px;
 }
 .bread {
@@ -309,7 +321,8 @@ ul {
 .method-card {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: calc(100% - 20px);
+  margin-top: 20px;
 }
 .method-icon {
   width: 86px;
